# fgstars

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  CMakeLists.txt  INSTALL  README.cicd  README.md  config-kstars.h.cmake  ekos-image-centric-workspace-initiative-sub-issues.md
.forgejo/workflows/: build-and-test.yml  validation.yml
.github/workflows/: build-and-test.yml  validation.yml
.lldb/formatters/: README.md  all.py  kstars.py  qt6.py
Tests/: CMakeLists.txt  README.md
Tests/auxiliary/: testkspaths.cpp
Tests/ekos/align/: test_polaralign.cpp
Tests/ekos/capture/: test_placeholderpath.cpp
Tests/ekos/scheduler/: testschedulerunit.cpp
Tests/kstars_lite_ui/: CMakeLists.txt
Tests/kstars_ui/: CMakeLists.txt  kstars_ui_tests.cpp  kstars_ui_tests.h  mockmodules.h  org.kde.mockkstars.MockEkos.MockCapture.xml  org.kde.mockkstars.MockEkos.MockGuide.xml  test_catalog_download.cpp  test_ekos.h  test_ekos_align.cpp  test_ekos_align.h  test_ekos_capture.cpp  test_ekos_capture.h  test_ekos_capture_workflow.cpp  test_ekos_capture_workflow.h  test_ekos_focus.cpp  test_ekos_focus.h  test_ekos_helper.cpp  test_ekos_helper.h  test_ekos_scheduler_helper.cpp  test_ekos_scheduler_ops.cpp  test_ekos_scheduler_ops.h  test_ekos_simulator.cpp  test_ekos_wizard.cpp  test_ekos_wizard.h  test_headless_ux_screenshot.cpp  test_headless_ux_screenshot.h  test_kstars_startup.cpp  test_starstudio_targetfinder.cpp  test_starstudio_targetfinder.h
cmake/modules/: FindINDI.cmake
datahandlers/: CMakeLists.txt  ksparser.cpp
docker/: Dockerfile
docs/: ekos-workspace-ux-audit.md  indi-vendoring.md
docs/specs/: ekos-gnome-hig-ux-redesign.md  fgstars-v1-ekos-image-centric-workspace.md  star-studio-implementation-blueprint.md
kstars/: CMakeLists.txt  Options.kcfgc.cmake  csv.h  kstars.kcfg  kstarsactions.cpp  kstarsdata.cpp  kstarsdata.h  kstarsinit.cpp
kstars/auxiliary/: ctk3slider.h  ctkrangeslider.h  dms.h  geolocation.cpp  geolocation.h  ksdssdownloader.cpp  ksutils.cpp  ksutils.h  kswizard.cpp  kswizard.h  qcustomplot.h  thememanager.cpp
kstars/data/: CMakeLists.txt
kstars/dialogs/: catalogcoloreditor.ui  catalogcsvimport.h  detaildialog.cpp  locationdialog.cpp  locationdialog.h  locationdialog.ui  wizdata.ui
kstars/ekos/: manager.cpp  manager.h  manager.ui  profileeditor.ui  workspacesession.cpp  workspacesession.h
kstars/ekos/align/: align.cpp  mountmodel.cpp  opsastrometryindexfiles.ui
kstars/ekos/analyze/: analyze.cpp  analyze.ui
kstars/ekos/auxiliary/: filtersettings.ui  opslogs.ui  stellarsolverprofileeditor.cpp
kstars/ekos/capture/: camera.ui  cameraprocess.cpp  capturecountswidget.cpp  capturecountswidget.ui  capturehistory.cpp  capturehistorynavigation.ui  capturepreviewwidget.cpp  capturepreviewwidget.h  capturepreviewwidget.ui  captureprocessoverlay.ui  rotatorsettings.ui
kstars/ekos/ekoslive/: commands.h  ekoslivedialog.ui  message.cpp
kstars/ekos/focus/: aberrationinspector.cpp  abinstablewidget.h  curvefit.cpp  exposurewidget.h  focus.ui
kstars/ekos/guide/: guide.ui  guidedriftgraph.cpp  guidestatewidget.cpp  (+1 more)
kstars/fitsviewer/: fitscommon.h  fitsdata.cpp  fitsdebayer.h  fitsstack.cpp  fitsstack.h  fitstab.cpp  fitsview.cpp  fitsview.h  livestacking.ui  stretch.h  summaryfitsview.cpp  summaryfitsview.h
kstars/hips/: opships.ui
kstars/htmesh/: SkipListElement.h
kstars/indi/: blobmanager.h  clientmanager.h  customdrivers.ui  indicamera.cpp  indidustcap.cpp  indifilterwheel.cpp  indifocuser.cpp  indimount.cpp  servermanager.cpp  streamform.ui  videowg.cpp
kstars/options/: opsimageoverlay.ui  opssolarsystem.ui
kstars/projections/: equirectangularprojector.cpp
kstars/python/: CMakeLists.txt
kstars/skycomponents/: constellationnamescomponent.cpp  milkyway.cpp  satellitescomponent.cpp
kstars/skyobjects/: skypoint.h
kstars/time/: timezonerule.cpp  timezonerule.h
kstars/tools/: altvstime.cpp  imagingplanner.cpp  imagingplanner.h  modcalcdaylength.cpp  modcalcgalcoord.cpp  modcalcjd.cpp  modcalcplanets.cpp  modcalcsidtime.cpp  modcalcvizequinox.cpp  moonphasetool.cpp  sessionsortfilterproxymodel.h  skycalendar.cpp  starhopperdialog.h
packaging/android/: specifydependencies.cmake
po/af/: kstars.po
po/ar/: kstars.po
po/az/: kstars.po
po/be/: kstars.po
po/bg/: kstars.po
po/bn/: kstars.po
po/br/: kstars.po
po/bs/: kstars.po
po/ca/: kstars.po
po/ca@valencia/: kstars.po
po/cs/: kstars.po
po/cy/: kstars.po
po/da/: kstars.po
po/de/: kstars.po
po/el/: kstars.po
po/en_GB/: kstars.po
po/eo/: kstars.po
po/es/: kstars.po
po/et/: kstars.po
po/eu/: kstars.po
po/fa/: kstars.po
po/fi/: kstars.po
po/fr/: kstars.po
po/ga/: kstars.po
po/gl/: kstars.po
po/gu/: kstars.po
po/hi/: kstars.po
po/hne/: kstars.po
po/hr/: kstars.po
po/hu/: kstars.po
po/is/: kstars.po
po/it/: kstars.po
po/ja/: kstars.po
po/ka/: kstars.po
po/kk/: kstars.po
po/km/: kstars.po
po/ko/: kstars.po
po/lt/: kstars.po
po/lv/: kstars.po
po/mai/: kstars.po
po/mk/: kstars.po
po/ml/: kstars.po
po/mr/: kstars.po
po/ms/: kstars.po
po/nb/: kstars.po
po/nds/: kstars.po
po/ne/: kstars.po
po/nl/: kstars.po
po/nn/: kstars.po
po/oc/: kstars.po
po/pa/: kstars.po
po/pl/: kstars.po
po/pt/: kstars.po
po/pt_BR/: kstars.po
po/ro/: kstars.po
po/ru/: kstars.po
po/se/: kstars.po
po/si/: kstars.po
po/sk/: kstars.po
po/sl/: kstars.po
po/sq/: kstars.po
po/sv/: kstars.po
po/ta/: kstars.po
po/tg/: kstars.po
po/th/: kstars.po
po/tr/: kstars.po
po/ug/: kstars.po
po/uk/: kstars.po
po/xh/: kstars.po
po/zh_CN/: kstars.po
po/zh_TW/: kstars.po
scripts/: bootstrap_indi_3rdparty.sh  check_ui_accessibility.py  ci_configure.sh  ci_matrix.py  ci_merge_junit.py  ci_prepare_runtime.sh  ci_run_ctest.sh  doc_score.sh  eval_ci_topology.sh  eval_fgstars_closed_issues.sh  eval_fgstars_workspace.sh  eval_fgstars_workspace_doc.sh  eval_tests.sh  install_vendored_indi_runtime.sh
submodules/indi/: README.Cygwin
tools/: eval_cpp26_config.sh  eval_qt6_only.sh
(+36 files in other folders)
